css/style.css
@font-face {
    font-family: 'Futura';
    src: local('Futura Medium'), 
        local('Futura-Medium'),
        local('Futura_Medium'),
        url('fonts/Futura_Medium.otf')
        format('opentype');
    src: local('Futura Medium'), 
        local('Futura-Medium'),
        local('Futura_Medium'),
        url('fonts/Futura_ICG.ttf')
        format('truetype');
}

html, body {
  font-family: 'Futura', sans-serif;
  max-height: 100vh;
  overflow-x: hidden;
  overflow-y: visible;
  font-size: 100%;
  margin: 0;
}

.container {
  width: 100%;
}

.wrapper {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;  
  
  -webkit-flex-flow: row wrap;
  flex-flow: row wrap;
}


div#navbar-ipad {
  display: none;
}

.nav {
  letter-spacing: -.3px;
}

ul {
  list-style-type: none;
  padding: 0;
  text-align: center;
}

ul li {
  display: inline;
  padding-left: 1.5%;
  padding-right: 1.5%;
}

ul li#logo {
  font-size: 200%; /*30px*/
  letter-spacing: -1.4px;
}

ul li#logo-ipad {
  display: none;
}

ul li#print_archive {
  color: #C0C0C0;
}

a {
  text-decoration: none;
  color: inherit;
}
.center {
  text-align: center;
}

.bottom-align {
  position: absolute;
  bottom: 5px;
}

address {
  padding-bottom: 1em;
}

address a {
  text-decoration: none;
  color: inherit;
  font-style: normal;
  font-size: .75em;
}

address p {
  font-size: 2em;
  margin: 0;
  padding-top: 5px;
}

footer {
  padding-bottom: .25em;
}

div.social-media img {
  max-height: 30px;
    max-width: 30px;
     width: auto;
     height: auto;
}

.fullscreen-bg {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    overflow: hidden;
    z-index: -100;
}

.fullscreen-bg__video {
    position: absolute;
    top: 50%;
    left: 50%;
    width: auto;
    height: auto;
    min-width: 100%;
    min-height: 100%;
    -webkit-transform: translate(-50%, -50%);
       -moz-transform: translate(-50%, -50%);
        -ms-transform: translate(-50%, -50%);
      transform: translate(-50%, -50%);
}

div.slick-slider {
  width: 100vw;
}

.slider {
  margin: 0 auto;
  width: 943px;
  margin-top: 0em;
  margin-bottom: 1.5em;
  border: 2px solid white;
  height: 80%;
}

.slick-slide {
   transition: opacity .5ms ease;
   outline: none !important;
}

.slick-slide.opacidown {
  opacity: 0;
}

div.slick-current {
   opacity: 1;
   transition: opacity .5ms ease;
}

div.slick-active {
   opacity: 1;
   transition: opacity .5ms ease;
}

section#buy {
  text-align: center;
}

section#buy a {
  color: inherit;
  text-decoration: none;
}

.margin-top {
  margin-top: 1em;
}


/*/////////// ABOUT /////////*/


.vertical-center {
  position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

section#about {
  text-align: center;
  margin-top: 3.5%;
}

div#description {
  margin-bottom: 2%;
  text-align: center;
}

.bottom-center {
  position: absolute;
  left: 50%;
  transform: translate(-50%, -50%);
  bottom: 0;
}

/* /////// CURRENT /////// */
section#current {
  text-align: center;
}


/*///////// CARTON /////////*/

.carton {
 width: 80%;
 margin-right:auto;
 margin-left:auto;
 overflow: hidden;
 padding-top: 1em;
}

.galleryItem img {
 max-width: 100%;
 -webkit-border-radius: 1px;
 -moz-border-radius: 1px;
 border-radius: 1px;
}

.galleryItem {
 float: left;
 width: 16%;
}

.small-margin {
  margin: .5% .5% 14px 0;
}

.paypal_btn{
display: inline-block;
font-family: inherit;
font-size: 1em;
color: #000;
padding: 2px 14px;
margin: 0;
background: #fff;
border: 0;
cursor: pointer;
outline: none;
}

button, html input[type="button"], input[type="reset"], input[type="submit"] {
    -webkit-appearance: button-bevel;
}
/*.paypal_btn:hover{ background: ; }
*/
/*//////// SLIDER IMAGES /////////*/

#img0 {
  background-image: url("../images/issue01/NICOTINECOVER.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img1 {
  background-image: url("../images/issue01/NICOTINE01.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img2 {
  background-image: url("../images/issue01/NICOTINE02.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img3 {
  background-image: url("../images/issue01/NICOTINE03.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img4 {
  background-image: url("../images/issue01/NICOTINE04.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img5 {
  background-image: url("../images/issue01/NICOTINE05.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img6 {
  background-image: url("../images/issue01/NICOTINE06.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img7 {
  background-image: url("../images/issue01/NICOTINE07.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img8 {
  background-image: url("../images/issue01/NICOTINE08.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img9 {
  background-image: url("../images/issue01/NICOTINE09.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}

#img10 {
  background-image: url("../images/issue01/NICOTINE10.jpg");
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  height: 32em;
  width: 58em;
}
/* ... */

